# feathr-registry

./: .gitignore  API-spec.md  Cargo.toml  Dockerfile
.github/workflows/: feathrregistry-AutoDeployTrigger-05614e69-d567-4aaa-be51-e57d8fa88d3e.yml  main_feathrregistry.yml
atlas-provider/: Cargo.toml
auth/src/: token.rs
common-utils/src/: lib.rs
feathr-registry/: Cargo.toml
feathr-registry/src/: api_models.rs  error.rs  main.rs  spa_endpoint.rs
feathr-registry/src/api_models/: attributes.rs  entity.rs  mod.rs
raft-registry/: Cargo.toml
raft-registry/src/: app.rs  client.rs  lib.rs  rbac_middleware.rs
raft-registry/src/network/: api.rs  api_v1.rs  api_v2.rs  management.rs  mod.rs  raft_network_impl.rs
raft-registry/src/store/: config.rs  mod.rs  store.rs
registry-api/: Cargo.toml
registry-api/src/: api_provider.rs  error.rs
registry-api/src/api_models/: attributes.rs  edge.rs  entity.rs  mod.rs
registry-app/: Cargo.toml
registry-app/src/: main.rs
registry-provider/: Cargo.toml
registry-provider/src/: error.rs  fts.rs  lib.rs  models.rs  operators.rs  registry.rs
registry-provider/src/models/: attributes.rs  edge.rs  edge_prop.rs  entity.rs  entity_def.rs  entity_prop.rs  mod.rs
scripts/: mysql.sql
sql-provider/: Cargo.toml
sql-provider/src/: db_registry.rs  fts.rs  lib.rs  mock.rs  rbac_map.rs  serdes.rs
sql-provider/src/database/: mod.rs  mssql.rs  sqlx.rs
test-data/: test-cluster.sh  test.db
