[package]
name = "feathr-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
poem = { version = "1", features = ["static-files"] }
poem-openapi = { version = "2", features = ["static-files"] }
percent-encoding = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"

common-utils = { path = "../common-utils" }
registry-provider = { path = "../registry-provider" }

sql-provider = { path = "../sql-provider", optional = true }

[features]
default = ["sqlbackend"]
sqlbackend = ["sql-provider"]
